# mod_carddav

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  carddav_files  carddav_liveprops.c  carddav_liveprops.h  carddav_tests  carddav_vcard.c  carddav_vcard.h  config.h.in  configure  configure.in  dav_carddav.conf  dav_carddav.load  libtool  mod_carddav.c  mod_carddav.h  mod_carddav.spec.in  test_carddav.c  vcard_tests.c
debian/: changelog  control  copyright  mod-carddav.install  rules
